Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@ bowtie2-build dmel-all-chromosome-r5.57.fasta dmel_r5.57
 <h3>
 <a id="output" class="anchor" href="#output" aria-hidden="true"><span class="octicon octicon-link"></span></a>Output</h3>
 
-<p>The final output will be two ratio files: Sample-vs-DAM.gff and Sample-vs-DAM.gatc.gff. The .gatc.gff file represents the GATC fragments (based on the reference genome) and should be used for all subsequent analysis. The other ratio file contains the coverageBed bins (i.e. 75nt bins by default) and may be useful for data representation.</p>
+<p>The final output will be two ratio files: Sample-vs-DAM.gff and Sample-vs-DAM.gatc.gff. The .gatc.gff file represents the data at GATC fragment resolution (based on the reference genome) and should be used for all subsequent analysis. The other ratio file contains the coverageBed bins (i.e. 75nt bins by default) and may be useful for data representation.</p>
 
-<p>The GFF format is used by default.  The pipeline script can output the final ratio files in BEDGRAPH format instead if the --output_format=bedgraph command-line switch is used.</p>
+<p>The <a href="http://www.ensembl.org/info/website/upload/gff.html">GFF format</a> is used by default.  The pipeline script can output the final ratio files in <a href="http://genome.ucsc.edu/goldenpath/help/bedgraph.html">BedGraph format</a> instead if the --output_format=bedgraph command-line switch is used.</p>
 
 <p>Either file can be converted to .tdf format for viewing in <a href="http://www.broadinstitute.org/software/igv/">IGV</a> via the provided <a href="http://github.com/owenjm/damid_pipeline/blob/master/gff2tdf.pl?raw=true">gff2tdf.pl</a> script.</p>
 
