Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 <h3>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
 
-<p>Click on the links above to download the latest version of the pipeline script and associated files.</p>
+<p>Download the latest version of the pipeline script and associated files:</p>
+
+<ul>
+<li><a href="https://github.com/owenjm/damidseq_pipeline/zipball/master">As a zipfile</a></li>
+<li><a href="https://github.com/owenjm/damidseq_pipeline/tarball/master">As a tarball</a></li>
+</ul>
 
 <h3>
 <a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h3>
