Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>damidseq_pipeline by owenjm</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/main.js"></script>
     <!--[if lt IE 9]>
@@ -94,11 +94,11 @@
 
 <ol>
 <li>
-<p>Download the latest FASTA genome primary_assembly (or toplevel) file from <a href="ftp.ensembl.org/pub/current_fasta/">Ensembl</a>
+<p>Download the latest FASTA genome primary_assembly (or toplevel) file from <a href="http://ftp.ensembl.org/pub/current_fasta/">Ensembl</a>
 e.g. <a href="http://ftp.ensembl.org/pub/current_fasta/mus_musculus/dna/Mus_musculus.GRCm38.dna.primary_assembly.fa.gz">the current release for <em>Mus musculus</em></a></p>
 
-<p>(alternatively, for <em>Drosophila</em>, download from the <a href="http://ftp.flybase.net/releases/current/">Flybase FTP site</a>
- e.g. <a href="http://ftp.flybase.net/releases/FB2014_03/dmel_r5.57/fasta/dmel-all-chromosome-r5.57.fasta.gz"><em>D. melanogaster</em> release 5.57</a>)</p>
+<p>(alternatively, for <em>Drosophila</em>, download from the Flybase FTP site
+ e.g. <em>D. melanogaster</em> release 5.57)</p>
 </li>
 <li>Extract the .gz file</li>
 <li>
