--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <p>Processing DamID-seq data involves extending single-end reads, aligning the reads to the genome and determining the coverage, similar to processing regular ChIP-seq datasets. However, as DamID data is represented as a log2 ratio of (Dam-fusion/Dam), normalisation of the sample and Dam-only control is necessary and adding pseudocounts to mitigate the effect of background counts is highly recommended.</p>
 
-<p>We use a single pipeline script to handle sequence alignment, read extension, binned counts, normalisation, pseudocount addition and final ratio file generation. The script uses FASTQ or BAM files as input, and outputs the final log2 ratio files in GFF or bedGraph format. These files can easily be converted to TDF for viewing in <a href="http://www.broadinstitute.org/software/igv/">IGV</a> with the provided <a href="http://github.com/owenjm/damid_pipeline/blob/master/gff2tdf.pl?raw=true">gff2tdf.pl</a> script (see below).</p>
+<p><a href="https://github.com/owenjm/damidseq_pipeline/tarball/master">damidseq_pipeline</a> is a single script that automatically handles sequence alignment, read extension, binned counts, normalisation, pseudocount addition and final ratio file generation. The script uses FASTQ or BAM files as input, and outputs the final log2 ratio files in GFF or bedGraph format. These files can easily be converted to TDF for viewing in <a href="http://www.broadinstitute.org/software/igv/">IGV</a> with the provided <a href="http://github.com/owenjm/damid_pipeline/blob/master/gff2tdf.pl?raw=true">gff2tdf.pl</a> script (see below).</p>
 
 <h3>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
@@ -52,8 +52,8 @@
 <p>Download the latest version of the pipeline script and associated files:</p>
 
 <ul>
-<li><a href="https://github.com/owenjm/damidseq_pipeline/zipball/master">As a zipfile</a></li>
 <li><a href="https://github.com/owenjm/damidseq_pipeline/tarball/master">As a tarball</a></li>
+<li><a href="https://github.com/owenjm/damidseq_pipeline/zipball/master">As a zipfile</a></li>
 </ul>
 
 <p>Prebuilt GATC fragment files used by the script are available for the following genomes:</p>
@@ -84,7 +84,7 @@
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
 
 <ol>
-<li>Unzip the pipeline script zip file, make the damid_pipeline.pl file executable and place it in your path</li>
+<li>Extract the pipeline script archive, make the damid_pipeline file executable and place it in your path</li>
 <li>Install <a href="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml">Bowtie 2</a>
 </li>
 <li>
@@ -97,8 +97,8 @@
 <p>Download the latest FASTA genome primary_assembly (or toplevel) file from <a href="http://ftp.ensembl.org/pub/current_fasta/">Ensembl</a>
 e.g. <a href="http://ftp.ensembl.org/pub/current_fasta/mus_musculus/dna/Mus_musculus.GRCm38.dna.primary_assembly.fa.gz">the current release for <em>Mus musculus</em></a></p>
 
-<p>(alternatively, for <em>Drosophila</em>, download from the Flybase FTP site
- e.g. <em>D. melanogaster</em> release 5.57)</p>
+<p>(alternatively, for <em>Drosophila</em>, download from the Flybase FTP site (ftp://ftp.flybase.net/releases/current/)
+ e.g. ftp://ftp.flybase.net/releases/FB2014_03/dmel_r5.57/fasta/dmel-all-chromosome-r5.57.fasta.gz )</p>
 </li>
 <li>Extract the .gz file</li>
 <li>
@@ -158,7 +158,7 @@ bowtie2-build dmel-all-chromosome-r5.57.fasta dmel_r5.57
 
 <p>In order to setup the pipeline to process the <em>D. melanogaster</em> genome, for example, the first-run command would be:</p>
 
-<pre><code>damidseq_pipeline.pl --gatc_frag_file=path/to/Dmel_r5.57.GATC.gff.gz --bowtie2_genome_dir=path/to/dmel_r5.57/dmel_r.5.57
+<pre><code>damidseq_pipeline --gatc_frag_file=path/to/Dmel_r5.57.GATC.gff.gz --bowtie2_genome_dir=path/to/dmel_r5.57/dmel_r.5.57
 </code></pre>
 
 <p>If these paths do not already exist and the script is run with these options and correct values, the paths will be saved for all future runs unless overridden on the command-line.</p>
@@ -174,14 +174,14 @@ bowtie2-build dmel-all-chromosome-r5.57.fasta dmel_r5.57
 
 <p>To see all available options, run the script with --help command-line option:</p>
 
-<pre><code>damidseq_pipeline.pl --help
+<pre><code>damidseq_pipeline --help
 </code></pre>
 
 <p>This will give you a list of adjustable parameters and their default and current values if applicable. We recommend keeping these at the default value in most cases; however, these can be modified on the command-line with --option=value (no spaces).</p>
 
 <p>To save modified values for all future runs, run the script with the parameter you wish to change together with the --save_defaults command-line option:</p>
 
-<pre><code>damidseq_pipeline.pl --save_defaults
+<pre><code>damidseq_pipeline --save_defaults
 </code></pre>
 
 <p>If bowtie2 and samtools are not in your path, you can specify these on the command-line also.</p>
@@ -200,13 +200,13 @@ bowtie2-build dmel-all-chromosome-r5.57.fasta dmel_r5.57
 
 <p>If the user expects to process data from multiple genomes, separate genome specifications can be saved by using the --save_defaults=[name] along with the --bowtie2_genome_dir and --gatc_frag_file options (and any other custom options that the user wishes to set as default for this genome, e.g. the bin width).  For e.g.:</p>
 
-<pre><code>damidseq_pipeline.pl --save_defaults=fly --gatc_frag_file=path/to/Dmel_r5.57.GATC.gff.gz --bowtie2_genome_dir=path/to/dmel_r5.57/dmel_r.5.57
-damidseq_pipeline.pl --save_defaults=mouse --bins=500 --gatc_frag_file=path/to/MmGRCm38.GATC.gff.gz --bowtie2_genome_dir=path/to/Mm_GRCm38/GRCm38
+<pre><code>damidseq_pipeline --save_defaults=fly --gatc_frag_file=path/to/Dmel_r5.57.GATC.gff.gz --bowtie2_genome_dir=path/to/dmel_r5.57/dmel_r.5.57
+damidseq_pipeline --save_defaults=mouse --bins=500 --gatc_frag_file=path/to/MmGRCm38.GATC.gff.gz --bowtie2_genome_dir=path/to/Mm_GRCm38/GRCm38
 </code></pre>
 
 <p>Once set up, different genome definitions can be quickly loaded using the --load_defaults=[name] option, e.g.:</p>
 
-<pre><code>damidseq_pipeline.pl --load_defaults=fly
+<pre><code>damidseq_pipeline --load_defaults=fly
 </code></pre>
 
 <p>All currently saved genome definitions can be listed using --load_defaults=list.</p>
